# mini-Rust-os

./: .gdbinit  .gitignore  Makefile  README.md  TODO.md  qemulog.txt
.github/workflows/: deploy.yml
boot/: Cargo.toml
boot/src/: main.rs
easy-fs/: Cargo.toml
easy-fs-fuse/: Cargo.toml  out.txt
easy-fs-fuse/src/: main.rs
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  efs.rs  layout.rs  lib.rs  vfs.rs
kernel/: Cargo.toml  build.rs  x86_64.json
kernel/.cargo/: config.toml
kernel/src/: console.rs  lib.rs  link_app.S  linker.ld  loader.rs  main.rs  my_x86_64.rs  pic.rs  shell.rs  test.rs
kernel/src/app/: batch.rs  loader.rs  mod.rs
kernel/src/driver/: fb.rs  idt.rs  mod.rs  mouse.rs  pic.rs  serial.rs
kernel/src/drivers/: ahci.rs  mod.rs  pci.rs
kernel/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
kernel/src/future/: executor.rs  mod.rs
kernel/src/future/futures/: fs.rs  mod.rs  sync.rs  task.rs
kernel/src/kthread/: executor.rs  for_test.rs  mod.rs  processor.rs
kernel/src/mem/: frame_allocator.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/mm/: frame_allocator.rs  heap_allocator.rs  memory_area.rs  memory_set.rs  mod.rs  page_table.rs  physframe.rs
kernel/src/process/: manager.rs  mod.rs  proc.rs  switch.S  task.rs
kernel/src/requests/: blk_processor.rs  fs_processor.rs  mod.rs  processor.rs
kernel/src/sync/: condvar.rs  mod.rs  mutex.rs  sem.rs
kernel/src/syscall/: debug.rs  fs.rs  mod.rs  proc.rs  process.rs  sync.rs  task.rs  uaccess.rs
kernel/src/task/: executor.rs  keyboard.rs  kthread.rs  manager.rs  mod.rs  mouse.rs  process.rs  scheduler.rs  sleep.rs  switch.S  thread.rs
kernel/src/trap/: handler.rs  mod.rs  trap.S
kernel/src/utils/: mod.rs  my_x86_64.rs  pic.rs  serial.rs
kernel/tests/: double_fault.rs  heap_alloc.rs
old-user-bins/: cat.rs  cmd_args.rs  mpsc.rs  sleep_test.rs  thread.rs  user_shell.rs
tutorial/: .xdp-.~Mini-Rust-OS.pptx-6PXqhe  Mini-Rust-OS.pptx  Mini-Rust-OS.pptx:Zone.Identifier  book.toml  outline.md
tutorial/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
tutorial/book/md/: 中断处理.html  中断处理和系统调用.html  任务管理.html  任务调度.html  内存分配器.html  内存管理.html  内核fs.html  内核架构.html  内核线程故障恢复.html  内核线程服务模型.html  内核线程管理.html  协程执行器.html  地址空间.html  异步协程.html  异步管理.html  异步系统调用.html  引言.html  总结与计划.html  效果演示.html  文件类型.html  文件系统.html  文件系统服务线程.html  用户线程管理.html  系统调用.html  自定义请求类型.html  设计原则.html  请求处理器.html  进程管理.html  页表.html
tutorial/src/: SUMMARY.md
user/: Cargo.toml  Makefile  x86_64.json
user-components/: Cargo.toml
user-components/requests-info/: Cargo.toml
user-components/user-syscall/: Cargo.toml
user-components/user-syscall/src/: debug.rs  fs.rs  lib.rs  print.rs  sync.rs  task.rs
user/.cargo/: config.toml
user/src/: console.rs  lang_items.rs  lib.rs  print.rs  syscall.rs
(+36 files in other folders)
