[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11"
spin = { version = "0.9" }
x86_64 = "0.14"
noto-sans-mono-bitmap = "0.2"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator" }
buddy_system_allocator = { version = "0.9" }
crossbeam-queue = { version = "0.3", default-features = false, features = [
    "alloc",
] }
futures-util = { version = "0.3", default-features = false }

log = "0.4.19"
xmas-elf = "0.8"
bitflags = "1"
easy-fs = {path = "../easy-fs"}
isomorphic_drivers = { git = "https://github.com/rcore-os/isomorphic_drivers" }
pci = { git = "https://github.com/rcore-os/pci-rs" }

[[bin]]
name = "kernel"
test = false
