[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
zerocopy = "0.7"
trapframe = { path = "../crates/trapframe-rs" }
bootloader_api = "0.11"
x86_64 = "*"
buddy_system_allocator = { version = "0.10" }
futures-util = { version = "0.3", default-features = false }
woke = "0.0.4"
xmas-elf = "*"
bitflags = "*"
easy-fs = { path = "../easy-fs" }
isomorphic_drivers = { git = "https://github.com/rcore-os/isomorphic_drivers" }
pci = { git = "https://github.com/rcore-os/pci-rs" }
spin = "0.9"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator" }
log = "0.4"
hashbrown = "0.14"
num = { version = "0.4", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
downcast-rs = { version = "1.2.0", default-features = false }

user-syscall = { path = "../user-components/user-syscall" }
requests-info = { path = "../user-components/requests-info" }

[[bin]]
name = "kernel"
test = false
